crates/proef-cli/tests/snapshots/corpus__artifact__tests-features-500-api-note--a-note-posted-via-the-api-appears-on-the-board.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — A note posted via the API appears on the board
# source: tests/features/500_api_note.feature:9
# replay: hurl --test tests-features-500-api-note--a-note-posted-via-the-api-appears-on-the-board.hurl --variables-file tests-features-500-api-note--a-note-posted-via-the-api-appears-on-the-board.vars --secret apiToken=<value>

# tests/features/500_api_note.feature:10 — the workspace is provisioned (fixture warm-up probe)
# optional
GET http://127.0.0.1:8787/health
HTTP 200

# tests/features/500_api_note.feature:10 — the workspace is provisioned (provision the environment)
POST http://127.0.0.1:8787/api/v1/env/provision
Authorization: Bearer {{apiToken}}
{"run": "proef-snapshot"}
HTTP 201
[Captures]
envId: jsonpath "$.id"

# tests/features/500_api_note.feature:11 — the activity channel is activated and ready (request activation)
POST http://127.0.0.1:8787/api/v1/channel/activate
X-Proef-Env: {{envId}}
Authorization: Bearer {{apiToken}}
{"env": "{{envId}}"}
HTTP 200
[Captures]
channelId: jsonpath "$.channelId"

# tests/features/500_api_note.feature:11 — the activity channel is activated and ready (channel reports ready)
GET http://127.0.0.1:8787/api/v1/channel/{{channelId}}/state
X-Proef-Env: {{envId}}
[Options]
retry: 10
retry-interval: 300ms
HTTP 200
[Asserts]
jsonpath "$.status" == "ready"

# tests/features/500_api_note.feature:12 — the record W-${run:id} is resolved (search records for W-proef-snapshot)
GET http://127.0.0.1:8787/api/v1/admin/search/records
Authorization: Bearer {{apiToken}}
[Query]
q: W-proef-snapshot
HTTP 200
[Captures]
recordId: jsonpath "$[0].id"

# tests/features/500_api_note.feature:12 — the record W-${run:id} is resolved (confirm the record exists)
GET http://127.0.0.1:8787/api/v1/records/{{recordId}}
Authorization: Bearer {{apiToken}}
HTTP 200
[Asserts]
jsonpath "$.id" == "{{recordId}}"

# tests/features/500_api_note.feature:13 — a member posts a note to the board (post the note)
POST http://127.0.0.1:8787/api/v1/records/{{recordId}}/notes
X-Proef-Env: {{envId}}
Authorization: Bearer {{apiToken}}
{"body": "Note from proef proef-snapshot"}
HTTP 201
[Captures]
noteId: jsonpath "$.id"

# tests/features/500_api_note.feature:14 — the service records a delivery (delivery visible in queue)
GET http://127.0.0.1:8787/api/v1/deliveries/queue
X-Proef-Env: {{envId}}
Authorization: Bearer {{apiToken}}
[Options]
retry: 10
retry-interval: 300ms
HTTP 200
[Asserts]
jsonpath "$.items" count > 0

# tests/features/500_api_note.feature:15 — the board shows the note (note visible on the board)
GET http://127.0.0.1:8787/api/v1/channel/{{channelId}}/notes
X-Proef-Env: {{envId}}
[Options]
retry: 10
retry-interval: 300ms
HTTP 200
[Asserts]
jsonpath "$.notes[0].id" == "{{noteId}}"
