crates/proef-cli/tests/snapshots/corpus__artifact__tests-features-501-api-event--a-scheduled-item-created-via-the-api-appears-on-the-board.vars.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef variables for tests-features-501-api-event--a-scheduled-item-created-via-the-api-appears-on-the-board.hurl
# secret `apiToken` — supply at replay: --secret apiToken=<value>
