crates/proef-cli/tests/snapshots/corpus__artifact__tests-features-502-api-attachment--an-attachment-uploaded-via-the-api-appears-on-the-board.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — An attachment uploaded via the API appears on the board
# source: tests/features/502_api_attachment.feature:8
# replay: hurl --test tests-features-502-api-attachment--an-attachment-uploaded-via-the-api-appears-on-the-board.hurl --variables-file tests-features-502-api-attachment--an-attachment-uploaded-via-the-api-appears-on-the-board.vars --secret apiToken=<value>

# tests/features/502_api_attachment.feature:9 — the workspace is provisioned (fixture warm-up probe)
# optional
GET http://127.0.0.1:8787/health
HTTP 200

# tests/features/502_api_attachment.feature:9 — the workspace is provisioned (provision the environment)
POST http://127.0.0.1:8787/api/v1/env/provision
Authorization: Bearer {{apiToken}}
{"run": "proef-snapshot"}
HTTP 201
[Captures]
envId: jsonpath "$.id"

# tests/features/502_api_attachment.feature:10 — the activity channel is activated and ready (request activation)
POST http://127.0.0.1:8787/api/v1/channel/activate
X-Proef-Env: {{envId}}
Authorization: Bearer {{apiToken}}
{"env": "{{envId}}"}
HTTP 200
[Captures]
channelId: jsonpath "$.channelId"

# tests/features/502_api_attachment.feature:10 — the activity channel is activated and ready (channel reports ready)
GET http://127.0.0.1:8787/api/v1/channel/{{channelId}}/state
X-Proef-Env: {{envId}}
[Options]
retry: 10
retry-interval: 300ms
HTTP 200
[Asserts]
jsonpath "$.status" == "ready"

# tests/features/502_api_attachment.feature:11 — the record W-${run:id} is resolved (search records for W-proef-snapshot)
GET http://127.0.0.1:8787/api/v1/admin/search/records
Authorization: Bearer {{apiToken}}
[Query]
q: W-proef-snapshot
HTTP 200
[Captures]
recordId: jsonpath "$[0].id"

# tests/features/502_api_attachment.feature:11 — the record W-${run:id} is resolved (confirm the record exists)
GET http://127.0.0.1:8787/api/v1/records/{{recordId}}
Authorization: Bearer {{apiToken}}
HTTP 200
[Asserts]
jsonpath "$.id" == "{{recordId}}"

# tests/features/502_api_attachment.feature:12 — a member uploads an attachment (upload the attachment)
POST http://127.0.0.1:8787/api/v1/records/{{recordId}}/attachments
X-Proef-Env: {{envId}}
Authorization: Bearer {{apiToken}}
{"source": "fixture.jpg", "run": "proef-snapshot"}
HTTP 201
[Captures]
attachmentId: jsonpath "$.id"

# tests/features/502_api_attachment.feature:13 — the service records a delivery (delivery visible in queue)
GET http://127.0.0.1:8787/api/v1/deliveries/queue
X-Proef-Env: {{envId}}
Authorization: Bearer {{apiToken}}
[Options]
retry: 10
retry-interval: 300ms
HTTP 200
[Asserts]
jsonpath "$.items" count > 0

# tests/features/502_api_attachment.feature:14 — the board shows the attachment (attachment visible on the board)
GET http://127.0.0.1:8787/api/v1/channel/{{channelId}}/attachments
X-Proef-Env: {{envId}}
[Options]
retry: 10
retry-interval: 300ms
HTTP 200
[Asserts]
jsonpath "$.attachments[0].id" == "{{attachmentId}}"
