crates/proef-cli/tests/snapshots/corpus__artifact__tests-features-510-api-search-matrix--search-accepts-an-explicit-index-via-a-data-table.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — Search accepts an explicit index via a data table
# source: tests/features/510_api_search_matrix.feature:9
# replay: hurl --test tests-features-510-api-search-matrix--search-accepts-an-explicit-index-via-a-data-table.hurl --variables-file tests-features-510-api-search-matrix--search-accepts-an-explicit-index-via-a-data-table.vars --secret apiToken=<value>

# tests/features/510_api_search_matrix.feature:7 — the workspace is provisioned (fixture warm-up probe)
# optional
GET http://127.0.0.1:8787/health
HTTP 200

# tests/features/510_api_search_matrix.feature:7 — the workspace is provisioned (provision the environment)
POST http://127.0.0.1:8787/api/v1/env/provision
Authorization: Bearer {{apiToken}}
{"run": "proef-snapshot"}
HTTP 201
[Captures]
envId: jsonpath "$.id"

# tests/features/510_api_search_matrix.feature:10 — the operator searches for "Acme, Inc." (search records for Acme, Inc.)
GET http://127.0.0.1:8787/api/v1/admin/search/records
Authorization: Bearer {{apiToken}}
[Query]
q: Acme, Inc.
HTTP *
[Asserts]
status == 200
