crates/proef-cli/tests/snapshots/corpus__artifact__tests-features-510-api-search-matrix--search-accepts-an-explicit-index-via-a-data-table.vars.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef variables for tests-features-510-api-search-matrix--search-accepts-an-explicit-index-via-a-data-table.hurl
# secret `apiToken` — supply at replay: --secret apiToken=<value>
