crates/proef-cli/tests/snapshots/corpus__artifact__tests-features-510-api-search-matrix--search-over-missing-returns-404.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — Search over missing returns 404
# source: tests/features/510_api_search_matrix.feature:14
# replay: hurl --test tests-features-510-api-search-matrix--search-over-missing-returns-404.hurl --variables-file tests-features-510-api-search-matrix--search-over-missing-returns-404.vars --secret apiToken=<value>

# tests/features/510_api_search_matrix.feature:7 — the workspace is provisioned (fixture warm-up probe)
# optional
GET http://127.0.0.1:8787/health
HTTP 200

# tests/features/510_api_search_matrix.feature:7 — the workspace is provisioned (provision the environment)
POST http://127.0.0.1:8787/api/v1/env/provision
Authorization: Bearer {{apiToken}}
{"run": "proef-snapshot"}
HTTP 201
[Captures]
envId: jsonpath "$.id"

# tests/features/510_api_search_matrix.feature:15 — the operator searches for nobody (search missing for nobody)
GET http://127.0.0.1:8787/api/v1/admin/search/missing
Authorization: Bearer {{apiToken}}
[Query]
q: nobody
HTTP *
[Asserts]
status == 404
